--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     </ul>
 
 
-    <script src="js/script.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
