--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         </li>
     </ul>
 
-
+    <script src="js/hammer.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 
