--- a/index.html
+++ b/index.html
@@ -15,28 +15,20 @@
 </head>
 
 <body>
-    <div id="matrix" style="position: fixed; left:20px; top:50px;"></div>
-    <div class="wrap">
+    <div id="menuShow" class="nn">
+        <div>
+            <button id="gameS" >Играть</button>
+        <button id="recordsS" >Таблица рекордов</button>
+        <button id="ruleS">Правила игры</button>
+        </div>
+        
+    </div>
+    <div id="gameShow" class="nn">
+        <div class="wrap">
         <div id="rec" class="firstR">
             
         </div>
         <div id="rul" class="firstL">
-            <h4>В левом поле(начальном) располагаются ваши корабли</h4>
-            <p>Их всего 10 шт</p>
-            <ul>
-                <li>4-x палубный - 1 штука</li>
-                <li>3-x палубный - 2 штуки</li>
-                <li>2-x палубный - 3 штуки</li>
-                <li>1-x палубный - 4 штуки</li>
-            </ul>
-            <h4>Правила расположения кораблей</h4>
-            <p> Нельзя, чтобы корабли соприкасались ни боками, ни, даже, уголками. Как минимум одна клетка между ними должна быть обязательно. К краям поля корабли прижимать можно.</p>
-            <p>При размещении методом перетаскивания - перетащите мышкой корабли на игровое поле. Для установки корабля по вертикали, кликните по
-                нему правой кнопкой мышки.</p>
-            <p>При размещении случайным образом - корабли и их напрвления будут расставлены случайно</p>
-
-            <h4>Цель данной игры</h4>
-            <p>Победить компьютер. Игра заканчивается после 1 поражения компьютеру</p>
         </div>
         <div class="battlefield">
             <div id="icons">
@@ -229,6 +221,28 @@
             <div id="one4" class="ship one one4"></div>
         </li>
     </ul>
+    </div>
+    <div id="ruleShow" class="nn">
+        <h4>В левом поле(начальном) располагаются ваши корабли</h4>
+        <p>Их всего 10 шт</p>
+        <ul>
+            <li>4-x палубный - 1 штука</li>
+            <li>3-x палубный - 2 штуки</li>
+            <li>2-x палубный - 3 штуки</li>
+            <li>1-x палубный - 4 штуки</li>
+        </ul>
+        <h4>Правила расположения кораблей</h4>
+        <p> Нельзя, чтобы корабли соприкасались ни боками, ни, даже, уголками. Как минимум одна клетка между ними должна быть обязательно. К краям поля корабли прижимать можно.</p>
+        <p>При размещении методом перетаскивания - перетащите мышкой корабли на игровое поле. Для установки корабля по вертикали, кликните по
+            нему правой кнопкой мышки.</p>
+        <p>При размещении случайным образом - корабли и их напрвления будут расставлены случайно</p>
+
+        <h4>Цель данной игры</h4>
+        <p>Победить компьютер. Игра заканчивается после 1 поражения компьютеру</p>
+    </div>
+    <div id="recordsShow" class="nn">
+
+    </div>
 
     <script src="js/hammer.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
