--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </g>
                 </svg>
                 <div id="iconsMenu">
-                    <svg width=100 height=100 id="rulseicon" class="svg" version="1.1" viewBox="0 0 512 512"
+                    <svg width=100 height=100 id="rulei" class="svg" version="1.1" viewBox="0 0 512 512"
                         xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g>
@@ -93,7 +93,7 @@
                             <text x=256 y=280 text-anchor="middle" font-size=100 fill=white>Rulse</text>
                         </g>
                     </svg>
-                    <svg width=100 height=100 id="recordsicon" class="svg" version="1.1" viewBox="0 0 512 512"
+                    <svg width=100 height=100 id="recordsi" class="svg" version="1.1" viewBox="0 0 512 512"
                         xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g>
@@ -243,7 +243,7 @@
     <div id="recordsShow" class="nn">
 
     </div>
-    
+
     <script src="js/hammer.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
