--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         </div>
     </div>
     <script src="js/hammer.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/script_babel.js"></script>
 </body>
 
 </html>
